--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "mysql": "^2.13.0",
     "path": "^0.12.7",
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0",
-    "react-router-bootstrap": "^0.23.1"
+    "react-router-bootstrap": "^0.23.1",
+    "sequelize": "^3.30.2"
   },
   "devDependencies": {
     "babel-core": "^6.20.0",
